swag for favorite movie (post, delete, get)
