# api/controllers/userMovie.go
@@ -21,7 +21,7 @@ import (
 // @Accept  json
 // @Produce  json
 // @Success 200 {integer} integer 1
-// @Failure 400 {object} ErrorResponse
+// @Failure 400,404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Failure default {object} ErrorResponse
 // @Router /all [get]
@@ -117,7 +117,7 @@ func GetMovieByID(c *gin.Context) {
 // @Param seasonid path integer true "seasonid"
 // @Param seriesid path integer true "seriesid"
 // @Success 200 {integer} integer 1
-// @Failure 400 {object} ErrorResponse
+// @Failure 400,404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Failure default {object} ErrorResponse
 // @Router /movie/{id}/series/{seasonid}/{seriesid} [get]
